--- a/README.tex
+++ b/README.tex
@@ -1,4 +1,4 @@
-% Created 2023-08-28 月 13:11
+% Created 2023-08-28 月 13:29
 % Intended LaTeX compiler: pdflatex
 \documentclass[10pt]{article}
 \usepackage[utf8]{inputenc}
@@ -54,11 +54,8 @@
 \includegraphics[width=0.8\textwidth]{./img/board}\end{titlepage}
 \tableofcontents
 \pagebreak
-\section{Introduction}
-\label{sec:orgf97e357}
-
-\subsection{Motivation}
-\label{sec:orgae777db}
+\section{Introduction \& motivation}
+\label{sec:orgc614c93}
 This guide will present how to setup and use Xilinx's KRIA board, in particular
 for running ROS on a host Ubuntu system, as well as for deploying
 micro-ROS as a firmware on the MCU part of this board's chip.
@@ -68,45 +65,8 @@ of a CPU comprising both a general purpose ARM core, capable of running
 a Linux distribution, as well as another ARM core, real-time enabled,
 capable to run a RTOS.
 
-\subsection{Build instructions for this report}
-\label{sec:org0f400d4}
-The base file for this report is actually this README.org file itself.
-However, upon local build, this file is regularly exported as
-a \texttt{.tex} file that can be built normally.
-On a moderately recent Ubuntu-base distribution, the following packages seemed to be required to build the
-report:
-
-\begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{bash}
-sudo apt-get install texlive-base texlive-latex-recommended texlive-lang-japanese
-\end{minted}
-
-Then, the actual build can be made with a simple:
-
-\begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{bash}
-pdflatex README.tex
-\end{minted}
-
-No fancy Lua or theme at the moment !
-
-\subsubsection{Automatic build with CI/CD pipeline}
-\label{sec:orgbb6d28c}
-If you don't want to build the report yourself, a CI pipeline is used to make it on GitLab.
-
-You can check the steps in the .gitlab-ci.yml file.
-This build uses a base Ubuntu image and basically takes the same steps as presented above for a local build.
-
-A PDF artifact can be downloaded.
-
-\subsubsection{Headers and \LaTeX{} settings for export}
-\label{sec:org1a4f29d}
-A large amount of headers and parameters are needed in order
-to have this "README" document being exportable as a \LaTeX{}
-document formatted the way I wanted it to be.
-
-The detail can be seen in the raw \texttt{.org} version of this README.
-
 \section{Boot firmware}
-\label{sec:orgea33363}
+\label{sec:orge06c4ad}
 The goal for the Linux side of the deployment is to
 have the latest LTS version of Ubuntu up and running.
 In order to be able to boot such a newer version of Linux, the
@@ -116,7 +76,7 @@ The procedure is available in \href{https://docs.xilinx.com/r/en-US/ug1089-kv260
 but I will present it step by step here.
 
 \subsection{Getting the new firmware}
-\label{sec:org00affa0}
+\label{sec:org9f23dfc}
 A 2022 version of the board firmware is required in order to run the latest
 version of Ubuntu properly.
 
@@ -130,7 +90,7 @@ wget https://www.xilinx.com/member/forms/download/\
 
 
 \subsection{Reaching the board recovery tool}
-\label{sec:org0139d77}
+\label{sec:org8ced231}
 Now the firmware \texttt{.bin} image is available, it is possible to update it using the
 boards recovery tool. Here are the steps that must be taken in order to reach
 this tool and update the board:
@@ -145,30 +105,30 @@ range, except the specific \texttt{192.168.0.111}, which will be used by the
 board.
 \item Using a web browser on your host machine, access
 \texttt{http://192.168.0.111}. Thou shall now see the interface, as visible on
-the figure \ref{fig:orgd34b983} below.
+the figure \ref{fig:org0210e57} below.
 \end{itemize}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=1\textwidth]{img/recovery.png}
-\caption{\label{fig:orgd34b983}The recovery tool for the board, access from Firefox. We can see board information at the center, and the tools to upload the firmware at the bottom of the page.}
+\caption{\label{fig:org0210e57}The recovery tool for the board, access from Firefox. We can see board information at the center, and the tools to upload the firmware at the bottom of the page.}
 \end{figure}
 
 \subsection{Updating the boot firmware}
-\label{sec:org163c07f}
+\label{sec:orgc335bcc}
 From this "recovery" page, it is possible to upload the \texttt{.bin} file downloaded previously onto
 the board using the "Recover Image" section at the bottom right of the page.
 
 The board can be re-booted afterwards.
 
 \section{Installing Linux}
-\label{sec:org680a92b}
+\label{sec:orgdd69d9a}
 Withe the boot firmware being up-to-date, we can proceed to install a Linux distribution
 on our Kria board. The step needed to archive a full installation of Ubuntu 22.04
 will be presented in this section.
 
 \subsection{Preparing and booting a Ubuntu 22.04 media}
-\label{sec:org14f39e4}
+\label{sec:org75c9408}
 An \href{https://ubuntu.com/download/amd-xilinx}{official Ubuntu image} exists and is
 provided by Xilinx, allowing the OS installation to be quick and
 straightforward.
@@ -212,12 +172,12 @@ host# ssh ubuntu@192.168.4.11
 \end{minted}
 
 \subsection{Network and admin setups}
-\label{sec:org6f47199}
+\label{sec:org22b64a3}
 This section presents a variety of extra convenience configurations
 that can be used when setting-up the Kria board.
 
 \subsubsection{Proxy and DNS}
-\label{sec:org96776b1}
+\label{sec:org3e3339b}
 An issue that can occur when connecting the board to the internet is the
 conflicting situation with the university proxy.
 Indeed, as the network at Nanzan University requires to go through a proxy,
@@ -253,7 +213,7 @@ echo "export http_proxy=\""$https_proxy"\"" >> ~/.bashrc \
 Eventually the board can be rebooted in order for the setup to get applied cleanly.
 
 \subsubsection{\texttt{root} password}
-\label{sec:orgbbd73a4}
+\label{sec:orgf2f324f}
 \begin{tcolorbox}[colback=orange!5!white,colframe=orange!75!black]
 \textbf{WARNING}: Depending on your use-case, the setup presented in this
 subsection can be a critical security breach as it remove the need for a root
@@ -289,7 +249,7 @@ sudo reboot now
 
 
 \subsubsection{Static IP address}
-\label{sec:orgc185f01}
+\label{sec:orga247b4d}
 A static IP can be set by writing the following
 configuration into your \texttt{netplan} configuration file.
 
@@ -325,7 +285,7 @@ sudo netplan apply
 \end{minted}
 
 \subsubsection{Purging \texttt{snap}}
-\label{sec:org3d85902}
+\label{sec:orgc95c8e7}
 As the desktop-specific software are not used at all in the case
 of our project, there are some packages that can be purges in order for the
 system to become more lightweight.
@@ -362,7 +322,7 @@ systemctl list-units | grep snapd
 \end{minted}
 
 \subsubsection{Other unused heavy packages}
-\label{sec:org76133d3}
+\label{sec:org6e69356}
 Some other pieces of software can safely be removed since the desktop is
 not to be used:
 
@@ -377,12 +337,16 @@ sudo reboot now
 
 
 \section{Enabling \texttt{remoteproc}}
-\label{sec:orgd6ad2ba}
+\label{sec:org587ed50}
 One of the advantage of this Kria board, as cited previously, is the presence of
 multiple types of core (APU, MCU, FPGA) on the same chip.
 
 The part in focus in this guide is the usage of both the APU, running
 a Linux distribution and ROS2; and the MCU, running FreeRTOS and micro-ROS.
+Online available guides also provide information on how to deploy these types
+of systems and enabeling \texttt{remoteproc} for the Kria boad, but this guide
+will show a step-by-step, tried process to have a heterogeneous system
+up and running.\href{../dds-over-rpmsg-presentation/README.org}{DDS over RPMsg on HMP}
 
 The communication between both side is meant to be done using shared memory, but
 some extra setup is required in order to be running the real-time firmware, in particular
@@ -394,65 +358,65 @@ will present how to setup and use as an example firmware that utilizes the
 and communicate with the real-time firmware using the RPMsg system.
 
 \section{Loading a real-time firmware}
-\label{sec:org23db106}
+\label{sec:org95a8083}
 
 \section{Building micro-ROS as a static library}
-\label{sec:org736d2f8}
+\label{sec:org30e21ca}
 
 \section{Building a real-time firmware}
-\label{sec:orgeaff672}
+\label{sec:org8b0967f}
 
 \subsection{Setting up Vitis IDE}
-\label{sec:orgd137f0d}
+\label{sec:orgfa25a8f}
 
 \section{Adding micro-ROS to a firmware project}
-\label{sec:orgdc7369c}
+\label{sec:org74f5001}
 
 \section{Loading a real-time firmware}
-\label{sec:org6e38364}
+\label{sec:org023adda}
 
 \section{Running a ROS2 node}
-\label{sec:org34a5f11}
+\label{sec:orgcf77576}
 
 \subsection{On the host Linux}
-\label{sec:org2145e02}
+\label{sec:orgf0d4e5b}
 
 \subsection{In a container}
-\label{sec:orgbc93b17}
+\label{sec:org2d4c476}
 
 \section{micro-ROS agent}
-\label{sec:orgb824aba}
+\label{sec:org324d2a9}
 
 \pagebreak
 \appendix
 \section{DTO patch}
-\label{sec:org2018645}
+\label{sec:org199fa69}
 This file is available in this repositroy: \href{https://gitlab.com/sunoc/xilinx-kria-kv260-documentation/-/blob/b7300116e153f4b5a1542f8804e4646db8030033/src/system.patch}{system.patch}
 \inputminted[linenos, frame=single]{diff}{./src/system.patch}
 
 \pagebreak
 \section{Custom toolchain CMake settings}
-\label{sec:org3f5167d}
+\label{sec:orgdc83b41}
 This file is available in this repositroy: \href{https://gitlab.com/sunoc/xilinx-kria-kv260-documentation/-/blob/b7300116e153f4b5a1542f8804e4646db8030033/src/custom\_r5f\_toolchain.cmake}{custom r5f toolchain.cmake}
 \inputminted[linenos, frame=single]{cmake}{./src/custom_r5f_toolchain.cmake}
 
 \pagebreak
 \section{Custom Colcon meta settings}
-\label{sec:orgeff393a}
+\label{sec:org5d738c1}
 This file is available in this repositroy: \href{https://gitlab.com/sunoc/xilinx-kria-kv260-documentation/-/blob/b7300116e153f4b5a1542f8804e4646db8030033/src/custom\_r5f\_colcon.meta}{custom r5f colcon.meta}
 \inputminted[linenos, frame=single]{yaml}{./src/custom_r5f_colcon.meta}
 
 \pagebreak
 \section{Firmware time functions}
-\label{sec:org10a5a97}
+\label{sec:org508e0fe}
 
 \subsection{main}
-\label{sec:orgc9c5d20}
+\label{sec:orgcc1ff4f}
 This file is available in this repositroy: \href{https://gitlab.com/sunoc/xilinx-kria-kv260-documentation/-/blob/b7300116e153f4b5a1542f8804e4646db8030033/src/clock.c}{clock.c}
 \inputminted[linenos, frame=single]{c}{./src/clock.c}
 
 \subsection{header file}
-\label{sec:org2612fcc}
+\label{sec:org99e9b6e}
 \begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{c}
 /**< Microseconds per second. */
 #define MICROSECONDS_PER_SECOND    ( 1000000LL )  
@@ -465,15 +429,15 @@ This file is available in this repositroy: \href{https://gitlab.com/sunoc/xilinx
 
 \pagebreak
 \section{Firmware memory allocation functions}
-\label{sec:org0297985}
+\label{sec:org1225932}
 
 \subsection{main}
-\label{sec:org1dfef46}
+\label{sec:org434a968}
 This file is available in this repositroy: \href{https://gitlab.com/sunoc/xilinx-kria-kv260-documentation/-/blob/b7300116e153f4b5a1542f8804e4646db8030033/src/allocators.c}{allocators.c}
 \inputminted[linenos, frame=single]{c}{./src/allocators.c}
 
 \subsection{header file}
-\label{sec:orge063d68}
+\label{sec:org6d6b365}
 \begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{c}
 #ifndef _ALLOCATORS_H_
 #define _ALLOCATORS_H_
